ver 0.1.0-beta.2 - 各画面の枠組みとフェードを実装     - https://scrapbox.io/AXT-Holorhysm/各画面の切替時のフェード を参照 - 毎回404エラーがコンソールに出るのがめんどいのでCSSとJSの空ファイルを作成

--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
     <meta property="og:description" content="Vtuber事務所「ホロライブ」のファンメイド音ゲー 『Project Holorhysm』">
     <meta property="og:image" content="https://axtech.dev/img/thumbnail.png">
     <meta name="twitter:card" content="summary">
-    <link rel="stylesheet" href="style.css">
+    <!-- 各画面のスタイルシート -->
+    <link rel="stylesheet" href="style/common.css">
+    <link rel="stylesheet" href="style/title.css">
+    <link rel="stylesheet" href="style/list.css">
+    <link rel="stylesheet" href="style/play.css">
+    <link rel="stylesheet" href="style/result.css">
+    <!-- 各画面のスクリプト -->
+    <script src="script/title.js"></script>
+    <script src="script/list.js"></script>
+    <script src="script/play.js"></script>
+    <script src="script/result.js"></script>
 </head>
 
 <body>
-
+    <main id="title"></main>
+    <main id="list"></main>
+    <main id="play"></main>
+    <main id="result"></main>
+    <main id="fade"></main>
 </body>
