ver 0.1.0-beta.3 - タイトル画面を最低限整備 - タッチしても現状何も起こらないけど……

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 </head>
 
 <body>
-    <main id="title"></main>
+    <main id="title">
+        <div>
+            <h1>holorhysm</h1>
+            <p>ver 0.1.0</p>
+            <p class="desc">PLEASE TOUCH TO START</p>
+        </div>
+    </main>
     <main id="list"></main>
     <main id="play"></main>
     <main id="result"></main>
