ver 0.1.0-beta.5 - グローバルに譜面一覧オブジェクトを生成 - list→playの下準備

--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
             <p class="desc">PLEASE TOUCH TO START</p>
         </div>
     </main>
-    <main id="list"></main>
+    <main id="list">
+        <ol>
+            <li>
+                <details>
+                    <summary>
+                        いいわけバニー
+                    </summary>
+                    <p>兎田ぺこら</p>
+                    <p>ナナホシ管弦楽団</p>
+                    <button>BLOOM 18+</button>
+                </details>
+            </li>
+            <li></li>
+            <li></li>
+        </ol>
+    </main>
     <main id="play"></main>
     <main id="result"></main>
     <main id="fade"></main>
