ver 0.1.0-beta.6 - 『AXT-func.js』と『conv_JSONC-to-JSON.js』を前提外部スクリプトとして追加読み込み     - これに伴いtitle.jsからconv_JSONC-to-JSON.min.jsの内容を削除 - 楽曲リスト画面でプレイ開始ボタンが動くかの動作確認を可能にするための仮ボタン追加     - ついでにボタン押したっぽいアニメーションをつけるCSSを追加 - プレイ開始ボタン押下時に画面が#playに遷移するように     - #playにはまだなにもない

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <link rel="stylesheet" href="style/list.css">
     <link rel="stylesheet" href="style/play.css">
     <link rel="stylesheet" href="style/result.css">
+    <!-- 前提スクリプト -->
+    <!-- AXT-func.js (https://github.com/AyaExpTech/AXT-func.js) -->
+    <script src="https://cdn.jsdelivr.net/gh/AyaExpTech/AXT-func.js@v2.1.0/AXT-func.min.js"></script>
+    <!-- conv_JSONC-to-JSON.js (https://github.com/AyaExpTech/conv_JSONC-to-JSON.js) -->
+    <script src="https://cdn.jsdelivr.net/gh/AyaExpTech/conv_JSONC-to-JSON.js@v1.0.0/script.min.js"></script>
     <!-- 各画面のスクリプト -->
     <script src="script/title.js"></script>
     <script src="script/list.js"></script>
@@ -41,7 +46,7 @@
                     </summary>
                     <p>兎田ぺこら</p>
                     <p>ナナホシ管弦楽団</p>
-                    <button>BLOOM 18+</button>
+                    <button onclick="select(0, 0)">BLOOM 18+</button>
                 </details>
             </li>
             <li></li>
